--- a/_assets/sass/pages/_home.scss
+++ b/_assets/sass/pages/_home.scss
@@ -15,6 +15,27 @@ html {
   &[data-section-in-view="questions"]      { background-color: #9DB0A3; }
 }
 
+@keyframes brush-01-blue {
+	100% { background-position: 0 -1447px; }
+}
+html[data-section-in-view="interests"] #interests h2 {
+  position: relative;
+  &:before {
+    top: -30px;
+    left: -20px;
+    width: 390px;
+    height: 100px;
+    content: '';
+    position: absolute;
+    z-index: -1;
+  	background: url('../images/brush-01-blue.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+  	animation: brush-01-blue .3s steps(14);
+    animation-fill-mode: forwards;
+  }
+}
+
 .home {
   h2 {
     font-family: $font-headings-home;
