--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -282,6 +282,25 @@ html {
   html[data-section-in-view="questions"] {
     background-color: #9DB0A3; }
 
+@keyframes brush-01-blue {
+  100% {
+    background-position: 0 -1447px; } }
+html[data-section-in-view="interests"] #interests h2 {
+  position: relative; }
+  html[data-section-in-view="interests"] #interests h2:before {
+    top: -30px;
+    left: -20px;
+    width: 390px;
+    height: 100px;
+    content: '';
+    position: absolute;
+    z-index: -1;
+    background: url("../images/brush-01-blue.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    animation: brush-01-blue 0.3s steps(14);
+    animation-fill-mode: forwards; }
+
 .home h2 {
   font-family: "freight-sans-condensed-pro", Helvetica, Arial, sans-serif;
   display: inline-block;
