Add /bleep-bloop-shop page

--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -193,4 +193,5 @@ ul.get-started-checklist {
   'pages/home',
   'pages/objectives-course',
   'pages/jtbd',
+  'pages/bleep-bloop-shop',
   'pages/update';
