--- a/_assets/sass/components/_signup-forms.scss
+++ b/_assets/sass/components/_signup-forms.scss
@@ -22,6 +22,9 @@ body #mc_embed_signup {
     margin: 0 0 1em;
     padding: 0;
   }
+  input.email {
+    padding: 0.88em 0.7em;
+  }
   padding: 1em;
   background: transparentize($color-highlight, 0.7);
   border-radius: 0.3em;
