--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -318,6 +318,20 @@ html[data-section-in-view="interests"] #interests h2 {
     line-height: 1.2;
     display: block;
     font-weight: normal; }
+.home .coming-soon {
+  display: inline-block;
+  font-size: 0.5em;
+  border-radius: 0.4em;
+  padding: 0.3em 0.6em 0.4em;
+  background-color: rgba(253, 234, 152, 0.6);
+  color: #905418;
+  text-transform: uppercase;
+  font-weight: normal !important; }
+  @media only screen and (min-width: 768px) {
+    .home .coming-soon {
+      position: absolute;
+      margin-left: 1em;
+      margin-top: 0.2em; } }
 .home hr {
   width: 2em;
   height: 1px;
@@ -394,6 +408,14 @@ html[data-section-in-view="interests"] #interests h2 {
       display: inline;
       width: auto; } }
 
+.objectives-course .byline {
+  font-size: 1.2em;
+  font-weight: italic;
+  margin-top: -3em;
+  margin-bottom: 3em; }
+  @media only screen and (min-width: 768px) {
+    .objectives-course .byline {
+      text-align: center; } }
 @media only screen and (min-width: 768px) {
   .objectives-course .course-title-label {
     text-align: center; } }
