--- a/_assets/sass/pages/_home.scss
+++ b/_assets/sass/pages/_home.scss
@@ -53,6 +53,17 @@ html[data-section-in-view="interests"] #interests h2 {
       display: block;
       font-weight: normal;
     }
+    a {
+      color: inherit;
+      text-decoration: none;
+      display: inline-block;
+      border-bottom: 1px solid transparent;
+      transition: border-bottom-color 0.2s ease, color 0.2s ease;
+      &:hover, &:focus {
+        color: $color-link;
+        border-bottom-color: transparentize($color-link, 0.4);
+      }
+    }
   }
 
   .coming-soon {
