--- a/_assets/sass/pages/_reformers-course.scss
+++ b/_assets/sass/pages/_reformers-course.scss
@@ -141,9 +141,11 @@ $font-headings-course: "freight-sans-condensed-pro", Helvetica, Arial, sans-seri
 
   ul {
     margin-left: 0em;
-    font-style: italic;
     @include responsive-break-point(640px) {
       margin-left: 1em;
+    }
+    > li {
+      margin-bottom: 0.5em;
     }
   }
 
