Start the change-anything page

--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -193,6 +193,7 @@ ul.get-started-checklist {
   'pages/home',
   'pages/objectives-course',
   'pages/reformers-course',
+  'pages/change-anything',
   'pages/jtbd',
   'pages/bleep-bloop-shop',
   'pages/update';
