--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -845,11 +845,27 @@ html[data-section-in-view="interests"] #interests h2 {
   text-transform: none;
   line-height: 0.9;
   margin-bottom: 1.5em; }
+  .change-anything #page-title .name {
+    display: inline-block;
+    position: relative;
+    border-bottom: 0.2rem solid rgba(100, 84, 48, 0.1);
+    height: 0.9em;
+    top: -0.1em; }
+  @media only screen and (min-width: 768px) {
+    .change-anything #page-title .name {
+      position: static;
+      border-bottom: none; }
+    .change-anything #page-title .tagline {
+      font-size: 0.7em; } }
+  .change-anything #page-title em {
+    font-style: normal; }
+  @media only screen and (min-width: 768px) {
+    .change-anything #page-title em {
+      display: inline-block;
+      border-bottom: 0.2rem solid rgba(100, 84, 48, 0.1); } }
   .change-anything #page-title .tagline {
-    text-transform: uppercase;
-    font-family: "freight-sans-condensed-pro", Helvetica, Arial, sans-serif;
-    font-size: 0.6em;
-    margin-top: 0.6em;
+    font-size: 0.5em;
+    margin-top: 0.8em;
     display: block;
     font-weight: normal; }
 .change-anything blockquote {
@@ -917,47 +933,52 @@ html[data-section-in-view="interests"] #interests h2 {
   @media only screen and (min-width: 640px) {
     .change-anything .switch-away-from {
       margin: 0 3em 3em; } }
-.change-anything div.highlight, .change-anything #mc_embed_signup {
+.change-anything p.highlight, .change-anything #mc_embed_signup {
   padding: 1em;
   background: rgba(253, 234, 152, 0.3);
   border-radius: 0.3em;
   margin: 1em 0 2em;
   box-sizing: border-box; }
-.change-anything ul.examples {
+.change-anything .examples {
   font-size: 1em;
   line-height: 1.2em;
   background: #f7f4ee;
   padding: 1em;
-  margin: 1em;
-  color: gray;
-  list-style: none; }
-  .change-anything ul.examples h3 {
+  color: gray; }
+  @media only screen and (min-width: 768px) {
+    .change-anything .examples {
+      margin: 2em; } }
+  .change-anything .examples ul {
+    padding: 0;
+    margin: 0;
+    list-style: none; }
+  .change-anything .examples h3 {
     font-weight: 700;
     margin: 0;
     color: #333; }
-  .change-anything ul.examples strong {
+  .change-anything .examples strong {
     background-color: rgba(253, 234, 152, 0.5);
     padding: 0 0.2em;
     color: black;
     font-weight: normal; }
-  .change-anything ul.examples li:before {
+  .change-anything .examples li:before {
     border-top: 1px solid rgba(128, 128, 128, 0.5);
     margin: 1em auto;
     content: '';
     display: block;
     height: 1;
     max-width: 100px; }
-  .change-anything ul.examples li:first-of-type:before {
+  .change-anything .examples li:first-of-type:before {
     border-top: none; }
-.change-anything div.highlight {
+.change-anything p.highlight {
   margin-top: 4em; }
-  .change-anything div.highlight h2 {
+  .change-anything p.highlight h2 {
     margin: 0;
     margin-bottom: 0.5em; }
   @media only screen and (min-width: 640px) {
-    .change-anything div.highlight {
+    .change-anything p.highlight {
       text-align: center; }
-      .change-anything div.highlight p {
+      .change-anything p.highlight p {
         max-width: 80%;
         margin-left: auto;
         margin-right: auto; } }
@@ -1013,10 +1034,12 @@ html[data-section-in-view="interests"] #interests h2 {
 @media only screen and (min-width: 768px) {
   .change-anything .left {
     float: left;
-    width: 48%; }
+    width: 48%;
+    text-align: center; }
   .change-anything .right {
     float: right;
-    width: 48%; }
+    width: 48%;
+    text-align: center; }
   .change-anything .clearfix {
     zoom: 1; }
     .change-anything .clearfix:after {
@@ -1024,7 +1047,9 @@ html[data-section-in-view="interests"] #interests h2 {
       display: block;
       height: 0;
       clear: both;
-      visibility: hidden; } }
+      visibility: hidden; }
+  .change-anything .taskpaper {
+    text-align: left; } }
 .change-anything .taskpaper {
   font-size: 0.8em;
   line-height: 1.2em;
@@ -1056,6 +1081,10 @@ html[data-section-in-view="interests"] #interests h2 {
         content: '';
         left: 0;
         top: 0.6em; }
+.change-anything .text-center {
+  text-align: center; }
+.change-anything .margin-top {
+  margin-top: 1em; }
 
 .jtbd h1 {
   font-size: 2rem;
