--- a/_assets/sass/pages/_change-anything.scss
+++ b/_assets/sass/pages/_change-anything.scss
@@ -196,8 +196,7 @@ $font-headings-condensed: "freight-sans-condensed-pro", Helvetica, Arial, sans-s
   .examples {
     font-size: 1em;
     line-height: 1.2em;
-    background: lighten($color-text, 66%);
-    padding: 1em;
+    text-align: center;
 
     @include responsive-break-point(768px) {
       margin: 2em;
@@ -226,15 +225,16 @@ $font-headings-condensed: "freight-sans-condensed-pro", Helvetica, Arial, sans-s
 
     li {
       &:before {
-        border-top: 1px solid transparentize(lighten(#333, 30%), 0.5);
         margin: 1em auto;
+        width: 0.5em;
+        height: 0.5em;
+        border-radius: 100%;
+        background-color: $color-lines;
         content: '';
         display: block;
-        height: 1;
-        max-width: 100px;
       }
       &:first-of-type:before {
-        border-top: none;
+        display: none;
       }
     }
   }
