--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -942,8 +942,7 @@ html[data-section-in-view="interests"] #interests h2 {
 .change-anything .examples {
   font-size: 1em;
   line-height: 1.2em;
-  background: #f7f4ee;
-  padding: 1em;
+  text-align: center;
   color: gray; }
   @media only screen and (min-width: 768px) {
     .change-anything .examples {
@@ -962,14 +961,15 @@ html[data-section-in-view="interests"] #interests h2 {
     color: black;
     font-weight: normal; }
   .change-anything .examples li:before {
-    border-top: 1px solid rgba(128, 128, 128, 0.5);
     margin: 1em auto;
+    width: 0.5em;
+    height: 0.5em;
+    border-radius: 100%;
+    background-color: rgba(100, 84, 48, 0.1);
     content: '';
-    display: block;
-    height: 1;
-    max-width: 100px; }
+    display: block; }
   .change-anything .examples li:first-of-type:before {
-    border-top: none; }
+    display: none; }
 .change-anything p.highlight {
   margin-top: 4em; }
   .change-anything p.highlight h2 {
