--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -817,6 +817,14 @@ html[data-section-in-view="interests"] #interests h2 {
       display: inline;
       width: auto; } }
 
+.change-anything .about {
+  font-size: 0.6em;
+  padding: 0.2em 0.3em;
+  margin-left: 0.4em;
+  vertical-align: middle;
+  background: #FDEA98;
+  text-decoration: none;
+  border-radius: 0.3em; }
 .change-anything .byline {
   font-size: 1.2em;
   font-weight: italic;
@@ -903,10 +911,14 @@ html[data-section-in-view="interests"] #interests h2 {
   line-height: 1.1; }
 .change-anything mark {
   color: inherit;
-  background: rgba(253, 234, 152, 0.3);
+  background: rgba(253, 234, 152, 0.5);
+  border-radius: 0.8em 0.3em;
   display: inline;
   padding: 0 0.2em;
-  margin: 0 0; }
+  margin: 0 0;
+  font-style: normal;
+  font-weight: normal;
+  color: #645430; }
 .change-anything #mc_embed_signup, .change-anything #mc_embed_signup .button, .change-anything #mc_embed_signup input.email, .change-anything #mc_embed_signup #mc-embedded-subscribe-form div.mce_inline_error {
   font: inherit; }
 .change-anything #mc_embed_signup .button {
@@ -1085,9 +1097,33 @@ html[data-section-in-view="interests"] #interests h2 {
   margin-top: 1em; }
 .change-anything .kit-options {
   width: 80%;
-  margin: 0 auto; }
+  margin: 0 auto 2em; }
   .change-anything .kit-options h3 {
-    text-align: center; }
+    text-align: center;
+    font-weight: normal;
+    z-index: 10;
+    position: relative; }
+    .change-anything .kit-options h3 a {
+      color: #645430;
+      text-decoration: none; }
+      .change-anything .kit-options h3 a strong {
+        text-decoration: underline;
+        color: #bb5400; }
+  .change-anything .kit-options > div.active {
+    position: relative; }
+    .change-anything .kit-options > div.active::before {
+      position: absolute;
+      content: '';
+      left: 50%;
+      top: 50%;
+      width: 70%;
+      height: 80%;
+      -webkit-transform: translateX(-50%) translateY(-45%);
+      -moz-transform: translateX(-50%) translateY(-45%);
+      -ms-transform: translateX(-50%) translateY(-45%);
+      transform: translateX(-50%) translateY(-45%);
+      background-color: rgba(253, 234, 152, 0.5);
+      border-radius: 40% 20% 40% 20%; }
 .change-anything .kit-option-label {
   font-style: normal;
   font-size: 0.7em;
@@ -1100,6 +1136,9 @@ html[data-section-in-view="interests"] #interests h2 {
   line-height: 0.9;
   background-color: rgba(100, 84, 48, 0.2);
   margin-bottom: 0.3em; }
+@media only screen and (min-width: 768px) {
+  .change-anything .d-md-block {
+    display: block; } }
 
 .jtbd h1 {
   font-size: 2rem;
