--- a/_assets/sass/pages/_objectives-course.scss
+++ b/_assets/sass/pages/_objectives-course.scss
@@ -11,6 +11,12 @@ $font-headings-course: "freight-sans-condensed-pro", Helvetica, Arial, sans-seri
 }
 
 .objectives-course {
+  
+  .part-of {
+    display: block;
+    font-size: 1rem;
+    margin-top: 0.5em;
+  }
 
   .byline {
     font-size: 1.2em;
