change-anything: Add link-alt-lang

--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -130,6 +130,16 @@ ul.get-started-checklist {
   }
 }
 
+a.link-alt-lang {
+  position: absolute;
+  top: 0.7em;
+  right: 1.5em;
+  font-size: 0.8em;
+  font-weight: 600;
+  text-decoration: none;
+  z-index: 1;
+}
+
 // Base Styles: Tablets —————————————————————— •
 // ——————————————————————————————————————————— •
 
