--- a/_assets/sass/globals/_mixins.scss
+++ b/_assets/sass/globals/_mixins.scss
@@ -21,6 +21,7 @@ $color-text: #645430;
 $color-highlight: #FDEA98;
 $color-lines: rgba(100, 84, 48, 0.1);
 $color-spot: #FF548F;
+$color-headings-home: #708A9F;
 
 
 // Global classes ———————————————————————————— •
