--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
-<!--[if IEMobile 7 ]><html class="no-js iem7"><![endif]-->
-<!--[if lt IE 9]><html class="no-js lte-ie8"><![endif]-->
-<!--[if (gt IE 8)|(gt IEMobile 7)|!(IEMobile)|!(IE)]><!--><html class="no-js" lang="en"><!--<![endif]-->
+<html lang="{{ page.lang }}">
+<!--[if IEMobile 7 ]><html class="no-js iem7" lang="{{ page.lang }}"><![endif]-->
+<!--[if lt IE 9]><html class="no-js lte-ie8" lang="{{ page.lang }}"><![endif]-->
+<!--[if (gt IE 8)|(gt IEMobile 7)|!(IEMobile)|!(IE)]><!--><html class="no-js" lang="{{ page.lang }}"><!--<![endif]-->
   <head>
     <title>{{ page.title }}</title>
     <meta name="title" content="{{ site.title }}">
