--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -177,6 +177,15 @@ ul.get-started-checklist {
       /*Rotate the L 45 degrees to turn it into a checkmark*/
       transform: rotate(45deg); }
 
+a.link-alt-lang {
+  position: absolute;
+  top: 0.7em;
+  right: 1.5em;
+  font-size: 0.8em;
+  font-weight: 600;
+  text-decoration: none;
+  z-index: 1; }
+
 @media only screen and (min-width: 640px) {
   html {
     background-color: rgba(204, 187, 148, 0.1); }
