Fix rake, remove underline for change-anything title

--- a/_assets/sass/pages/_change-anything.scss
+++ b/_assets/sass/pages/_change-anything.scss
@@ -96,6 +96,10 @@ $font-headings-condensed: "freight-sans-condensed-pro", Helvetica, Arial, sans-s
       display: block;
       font-weight: normal;
     }
+    
+    a {
+      text-decoration: none;
+    }
   }
 
   blockquote {
