--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -404,12 +404,13 @@ html[data-section-in-view="interests"] #interests h2 {
     list-style: none;
     line-height: 1.2em; }
   .home .home-values mark {
-    font-weight: normal;
+    font-weight: bold;
     font-style: normal;
-    background: rgba(253, 234, 152, 0.3);
+    background: rgba(166, 201, 253, 0.3);
     display: inline-block;
     padding: 0.1em 0.2em;
-    margin: -0.1em 0; }
+    margin: -0.1em 0;
+    color: #708A9F; }
 
 @media only screen and (min-width: 640px) {
   .home h2 {
